[gd_scene load_steps=10 format=3 uid="uid://caiikvg3kii7s"]

[ext_resource type="FontFile" uid="uid://wmtd655ld5o1" path="res://asset/8bitoperator_jve.ttf" id="1_gmser"]
[ext_resource type="Script" path="res://scenes/screen/game_over.gd" id="1_n67ww"]
[ext_resource type="Texture2D" uid="uid://n51lire0nftf" path="res://asset/how-crack-egg_small.jpg" id="2_3u5k2"]
[ext_resource type="Script" path="res://scenes/screen/quote.gd" id="3_m7rwo"]
[ext_resource type="AudioStream" uid="uid://c1dqp1dgq4wat" path="res://asset/EDITED-20240108T091940Z-001/EDITED/fail with crack.ogg" id="4_nhdcc"]
[ext_resource type="AudioStream" uid="uid://basl8g21t8uu1" path="res://asset/EDITED-20240108T091940Z-001/EDITED/Button press.ogg" id="5_2px3r"]

[sub_resource type="LabelSettings" id="LabelSettings_g8bqc"]
font = ExtResource("1_gmser")
font_size = 45

[sub_resource type="LabelSettings" id="LabelSettings_3740q"]
font = ExtResource("1_gmser")
font_size = 60

[sub_resource type="LabelSettings" id="LabelSettings_qyqau"]
font = ExtResource("1_gmser")
font_size = 50

[node name="game over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n67ww")

[node name="thang" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="thang"]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="quote" type="Label" parent="thang"]
offset_left = 88.0
offset_top = 140.0
offset_right = 1839.0
offset_bottom = 465.0
text = "egg fell  a long way down..."
label_settings = SubResource("LabelSettings_g8bqc")
horizontal_alignment = 1
autowrap_mode = 3
script = ExtResource("3_m7rwo")

[node name="point" type="Label" parent="thang"]
offset_top = 376.0
offset_right = 1917.0
offset_bottom = 437.0
text = "points"
label_settings = SubResource("LabelSettings_3740q")
horizontal_alignment = 1

[node name="coin" type="Label" parent="thang"]
offset_top = 433.0
offset_right = 1917.0
offset_bottom = 494.0
text = "points"
label_settings = SubResource("LabelSettings_3740q")
horizontal_alignment = 1

[node name="go back" type="Button" parent="thang"]
offset_left = 241.0
offset_top = 603.0
offset_right = 695.0
offset_bottom = 756.0

[node name="Label" type="Label" parent="thang/go back"]
layout_mode = 0
offset_left = 179.0
offset_top = 48.0
offset_right = 270.0
offset_bottom = 99.0
text = "main menu"
label_settings = SubResource("LabelSettings_qyqau")

[node name="retry" type="Button" parent="thang"]
offset_left = 1240.0
offset_top = 603.0
offset_right = 1692.0
offset_bottom = 757.0

[node name="Label2" type="Label" parent="thang/retry"]
layout_mode = 0
offset_left = 3.0
offset_top = 39.0
offset_right = 452.0
offset_bottom = 111.0
text = "retry
"
label_settings = SubResource("LabelSettings_qyqau")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="thang"]
offset_left = 721.0
offset_top = 537.0
offset_right = 1201.0
offset_bottom = 871.0
texture = ExtResource("2_3u5k2")

[node name="fail with crack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_nhdcc")

[node name="button press" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_2px3r")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="visibility_changed" from="thang" to="." method="_on_thang_visibility_changed"]
[connection signal="visibility_changed" from="thang/quote" to="thang/quote" method="_on_visibility_changed"]
[connection signal="pressed" from="thang/go back" to="." method="_on_go_back_pressed"]
[connection signal="pressed" from="thang/retry" to="." method="_on_retry_pressed"]
